<resources>
    <string name="app_name">TinderWrap</string>
    <string name="photo">photo</string>
    <string name="add_tinder_token">add tinder token</string>
    <string name="go_swipe">Go swipe</string>
    <string name="go_fix">go fix</string>
    <string name="unknown">unknown</string>
    <string name="fix_photos_count">fix photos count</string>
    <string name="fix_bad">fix bad</string>
    <string name="fix_good">fix good</string>
</resources>