<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.StartActivity">

    <EditText
        android:id="@+id/etToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/add_tinder_token"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bGoSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_swipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etToken" />

    <EditText
        android:id="@+id/etGoFix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/fix_photos_count"
        android:lines="1"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bGoSwipe" />

    <Button
        android:id="@+id/bGoFix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_fix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGoFix" />

    <Button
        android:id="@+id/bGoFixBad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fix_bad"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toStartOf="@+id/bGoFix"
        app:layout_constraintTop_toTopOf="@+id/bGoFix" />

    <Button
        android:id="@+id/b_go_fix_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fix_good"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@+id/bGoFix"
        app:layout_constraintTop_toTopOf="@+id/bGoFix" />

</androidx.constraintlayout.widget.ConstraintLayout>